--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa Interativo</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
         #map {
             height: 80vh;
             width: 100%;
         }
         #filters, #add-location, #coordinates {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             margin: 10px 0;
         }
@@ -21,28 +27,42 @@
             flex-direction: column;
             align-items: center;
         }
-        #add-location input, #add-location button {
+        #add-location input, #add-location select, #add-location button {
             margin: 5px 0;
         }
-        #locList{
-            height: 20vh;
-            width: 30%;
+        @media (max-width: 600px) {
+            #filters label {
+                flex: 1 1 100%;
+                text-align: center;
+                margin: 5px 0;
+            }
+            #add-location input, #add-location select, #add-location button {
+                width: 90%;
+            }
         }
     </style>
 </head>
 <body>
     <div id="filters">
-        <label class="filter"><input type="checkbox" value="library" checked> Bibliotecas</label>
-        <label class="filter"><input type="checkbox" value="book_store" checked> Lojas de Livros</label>
-        <label class="filter"><input type="checkbox" value="park" checked> Recreação</label>
-        <label class="filter"><input type="checkbox" value="gym" checked> Esportes/Academias</label>
-        <label class="filter"><input type="checkbox" value="school" checked> Escolas</label>
-        <label class="filter"><input type="checkbox" value="university" checked> Cursos</label>
+        <label class="filter"><input type="checkbox" value="bibliotecas" checked> Bibliotecas</label>
+        <label class="filter"><input type="checkbox" value="livros" checked> Lojas de Livros</label>
+        <label class="filter"><input type="checkbox" value="recreação" checked> Parques</label>
+        <label class="filter"><input type="checkbox" value="esportes" checked> Centros Esportivos</label>
+        <label class="filter"><input type="checkbox" value="escolas" checked> Escolas</label>
+        <label class="filter"><input type="checkbox" value="cursos" checked> Cursos</label>
     </div>
     <div id="add-location">
         <input type="text" id="location-name" placeholder="Nome do Local">
         <input type="text" id="location-lat" placeholder="Latitude">
         <input type="text" id="location-lng" placeholder="Longitude">
+        <select id="location-category">
+            <option value="bibliotecas">Biblioteca</option>
+            <option value="livros">Loja de Livros</option>
+            <option value="recreação">Parque</option>
+            <option value="esportes">Centro Esportivo</option>
+            <option value="escolas">Escola</option>
+            <option value="cursos">Curso</option>
+        </select>
         <button onclick="addCustomLocation()">Adicionar Local</button>
     </div>
     <div id="coordinates">Latitude: <span id="lat"></span>, Longitude: <span id="lng"></span></div>
