--- a/index.html
+++ b/index.html
@@ -4,69 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa Interativo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        #map {
-            height: 80vh;
-            width: 100%;
-        }
-        #filters, #add-location, #coordinates {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin: 10px 0;
-        }
-        .filter, #coordinates {
-            margin: 0 10px;
-        }
-        #add-location {
-            flex-direction: column;
-            align-items: center;
-        }
-        #add-location input, #add-location select, #add-location button {
-            margin: 5px 0;
-        }
-        @media (max-width: 600px) {
-            #filters label {
-                flex: 1 1 100%;
-                text-align: center;
-                margin: 5px 0;
-            }
-            #add-location input, #add-location select, #add-location button {
-                width: 90%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="filters">
-        <label class="filter"><input type="checkbox" value="bibliotecas" checked> Bibliotecas</label>
-        <label class="filter"><input type="checkbox" value="livros" checked> Lojas de Livros</label>
-        <label class="filter"><input type="checkbox" value="recreação" checked> Parques</label>
-        <label class="filter"><input type="checkbox" value="esportes" checked> Centros Esportivos</label>
-        <label class="filter"><input type="checkbox" value="escolas" checked> Escolas</label>
-        <label class="filter"><input type="checkbox" value="cursos" checked> Cursos</label>
+        <label class="filter"><input type="checkbox" value="library" checked> Bibliotecas</label>
+        <label class="filter"><input type="checkbox" value="book_store" checked> Lojas de Livros</label>
+        <label class="filter"><input type="checkbox" value="park" checked> Parques</label>
+        <label class="filter"><input type="checkbox" value="gym" checked> Centros Esportivos</label>
+        <label class="filter"><input type="checkbox" value="school" checked> Escolas</label>
+        <label class="filter"><input type="checkbox" value="university" checked> Cursos</label>
     </div>
     <div id="add-location">
         <input type="text" id="location-name" placeholder="Nome do Local">
         <input type="text" id="location-lat" placeholder="Latitude">
         <input type="text" id="location-lng" placeholder="Longitude">
         <select id="location-category">
-            <option value="bibliotecas">Biblioteca</option>
-            <option value="livros">Loja de Livros</option>
-            <option value="recreação">Parque</option>
-            <option value="esportes">Centro Esportivo</option>
-            <option value="escolas">Escola</option>
-            <option value="cursos">Curso</option>
+            <option value="library">Biblioteca</option>
+            <option value="book_store">Loja de Livros</option>
+            <option value="park">Parque</option>
+            <option value="gym">Centro Esportivo</option>
+            <option value="school">Escola</option>
+            <option value="university">Curso</option>
         </select>
         <button onclick="addCustomLocation()">Adicionar Local</button>
     </div>
     <div id="coordinates">Latitude: <span id="lat"></span>, Longitude: <span id="lng"></span></div>
     <div id="map"></div>
+
+    <!-- The Modal -->
+    <div id="locationModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Adicionar Local</h2>
+            <input type="text" id="modal-location-name" placeholder="Nome do Local">
+            <select id="modal-location-category">
+                <option value="library">Biblioteca</option>
+                <option value="book_store">Loja de Livros</option>
+                <option value="park">Parque</option>
+                <option value="gym">Centro Esportivo</option>
+                <option value="school">Escola</option>
+                <option value="university">Curso</option>
+            </select>
+            <button id="saveLocation">Salvar</button>
+        </div>
+    </div>
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwFWq51x4_0S7QuKmhu77NasV2zK6MY00&libraries=places&callback=initMap" async defer></script>
     <script src="script.js"></script>
 </body>
